force-app/main/default/objects/Incentive__c/Incentive__c.object-meta.xml
<CustomObject>
    <label>Incentive</label>
    <pluralLabel>Incentives</pluralLabel>
    <nameField>
        <label>Incentive Number</label>
        <displayFormat>INC-{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Incentive calculation record for salesperson based on target achievement with slab-based multiplier computation (MOD-08 Target and Achievement Management)</description>
</CustomObject>