force-app/main/default/objects/Incentive__c/fields/Achievement_Percent__c.field-meta.xml
<CustomField>
    <fullName>Achievement_Percent__c</fullName>
    <label>Achievement Percent</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>