force-app/main/default/objects/Incentive__c/fields/Annual_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Annual_Bonus__c</fullName>
    <label>Annual Bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Annual bonus amount calculated as the average of the top 3 quarterly incentives earned during the financial year. Automatically computed by the annual bonus calculation engine.</inlineHelpText>
    <description>Calculated annual bonus = average of best 3 out of 4 quarterly incentives.</description>
</CustomField>