force-app/main/default/objects/Incentive__c/fields/Base_Amount__c.field-meta.xml
<CustomField>
    <fullName>Base_Amount__c</fullName>
    <label>Base Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
    <defaultValue>0</defaultValue>
    <description>The target value used as the base for incentive calculation.</description>
</CustomField>