force-app/main/default/objects/Incentive__c/fields/Incentive_Slab__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Slab__c</fullName>
    <label>Incentive Slab (Legacy)</label>
    <type>Text</type>
    <length>100</length>
    <description>Legacy text field. Use Incentive_Slab_Ref__c lookup instead.</description>
</CustomField>