force-app/main/default/objects/Incentive__c/fields/Incentive_Slab_Ref__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Slab_Ref__c</fullName>
    <label>Incentive Slab</label>
    <type>Lookup</type>
    <referenceTo>Incentive_Slab__c</referenceTo>
    <relationshipLabel>Incentives</relationshipLabel>
    <relationshipName>Incentive_Slab_Incentives</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Incentive Slab matched during calculation.</description>
</CustomField>