force-app/main/default/objects/Incentive__c/fields/Is_Annual_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Is_Annual_Bonus__c</fullName>
    <label>Is Annual Bonus</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
    <inlineHelpText>If checked, this incentive record represents an annual bonus (average of top 3 quarterly incentives), not a regular period-based incentive calculation.</inlineHelpText>
    <description>Flags this record as an annual bonus calculation rather than a regular incentive.</description>
</CustomField>