force-app/main/default/objects/Incentive__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
    <description>Admin notes for this incentive record.</description>
</CustomField>