force-app/main/default/objects/Incentive__c/fields/Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Salesperson__c</fullName>
    <label>Salesperson</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Incentives</relationshipLabel>
    <relationshipName>Incentives</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>