force-app/main/default/objects/Incentive__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <label>Target</label>
    <type>Lookup</type>
    <referenceTo>Target__c</referenceTo>
    <relationshipLabel>Incentives</relationshipLabel>
    <relationshipName>Incentives</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>