force-app/main/default/objects/Incentive__c/fields/Target_Actual__c.field-meta.xml
<CustomField>
    <fullName>Target_Actual__c</fullName>
    <label>Target Actual</label>
    <type>Lookup</type>
    <referenceTo>Target_Actual__c</referenceTo>
    <relationshipLabel>Incentives</relationshipLabel>
    <relationshipName>Incentives</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this incentive to the dynamic target actual record.</description>
</CustomField>