force-app/main/default/objects/Incentive__c/fields/Target_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Target_Criteria__c</fullName>
    <label>Target Criteria</label>
    <type>Lookup</type>
    <referenceTo>Target_Criteria__c</referenceTo>
    <relationshipLabel>Incentives</relationshipLabel>
    <relationshipName>Incentives</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The target criteria this incentive was calculated for.</description>
</CustomField>