force-app/main/default/objects/Incentive__c/fields/Target_Period__c.field-meta.xml
<CustomField>
    <fullName>Target_Period__c</fullName>
    <label>Target Period</label>
    <type>Lookup</type>
    <referenceTo>Target_Period__c</referenceTo>
    <relationshipLabel>Incentives</relationshipLabel>
    <relationshipName>Incentives</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The period this incentive calculation applies to.</description>
</CustomField>